--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-notify": "^2.0.0",
     "object-assign": "^1.0.0",
     "react": "^0.12",
+    "shortid": "^2.0.1",
     "uglifyify": "2.5.0",
     "vinyl-source-stream": "^1.0.0"
   },
