--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "gulp-minify-css": "^0.3.11",
     "gulp-notify": "^2.0.0",
     "object-assign": "^1.0.0",
-    "react": "^0.12",
+    "react": "^0.12.0-rc1",
     "uglifyify": "2.5.0",
     "vinyl-source-stream": "^1.0.0"
   },
@@ -21,7 +21,7 @@
     "gulp": "^3.8.5",
     "gulp-uglify": "^1.0.1",
     "literalify": "^0.3.0",
-    "reactify": "^0.13.1",
+    "reactify": "andreypopp/reactify",
     "rimraf": "^2.2.8",
     "run-sequence": "^0.3.6"
   },
